--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,8 @@
 
 body {
   color: rgb(var(--foreground-rgb));
+  padding: 1rem;
+  margin: 0 5rem;
   background: linear-gradient(
       to bottom,
       transparent,
