--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,9 @@ body {
   /* padding: 1rem; */
   /* margin: 0 5rem; */
 }
+
+@layer base {
+  h1 {
+    @apply font-extrabold text-2xl mb-3;
+  }
+}
